syntax = "proto3";

package tracks.v1;

import "google/protobuf/timestamp.proto";

message Track {
  string id = 1;
  string title = 2;
  string artist = 3;
  optional string album = 4;
  repeated string genres = 5;
  string slug = 6;
  optional string cover_image = 7;
  optional string audio_file = 8;
  google.protobuf.Timestamp created_at = 9;
  google.protobuf.Timestamp updated_at = 10;
}

message CreateTrackRequest {
  string title = 1;
  string artist = 2;
  optional string album = 3;
  repeated string genres = 4;
  optional string cover_image = 5;
}

message CreateTrackResponse {
  Track track = 1;
}

enum SortField {
  SORT_FIELD_UNSPECIFIED = 0;
  SORT_FIELD_TITLE = 1;
  SORT_FIELD_ARTIST = 2;
  SORT_FIELD_ALBUM = 3;
  SORT_FIELD_CREATED_AT = 4;
}

enum SortOrder {
  SORT_ORDER_UNSPECIFIED = 0;
  SORT_ORDER_ASC = 1;
  SORT_ORDER_DESC = 2;
}

message GetTracksRequest {
  optional int32 page = 1;
  optional int32 limit = 2;
  optional SortField sort = 3;
  optional SortOrder order = 4;
  optional string search = 5;
  optional string genre = 6;
  optional string artist = 7;
}

message GetTracksResponse {
  repeated Track tracks = 1;
  PaginationMeta meta = 2;
}

message PaginationMeta {
  int32 total = 1;
  int32 page = 2;
  int32 limit = 3;
  int32 total_pages = 4;
}

message GetTrackBySlugRequest {
  string slug = 1;
}

message GetTrackBySlugResponse {
  Track track = 1;
}

message UpdateTrackRequest {
  string id = 1;
  optional string title = 2;
  optional string artist = 3;
  optional string album = 4;
  repeated string genres = 5;
  optional string cover_image = 6;
  optional string audio_file = 7;
}

message UpdateTrackResponse {
  Track track = 1;
}

message DeleteTrackRequest {
  string id = 1;
}

message DeleteTrackResponse {
  bool success = 1;
}

message DeleteTracksRequest {
  repeated string ids = 1;
}

message DeleteTracksResponse {
  repeated string success = 1;
  repeated string failed = 2;
}

message UploadFileRequest {
  string track_id = 1;
  string filename = 2;
  bytes content = 3;
  string content_type = 4;
}

message UploadFileResponse {
  Track track = 1;
}

message DeleteFileRequest {
  string track_id = 1;
}

message DeleteFileResponse {
  Track track = 1;
}

service TracksService {
  rpc GetTracks(GetTracksRequest) returns (GetTracksResponse);
  rpc GetTrackBySlug(GetTrackBySlugRequest) returns (GetTrackBySlugResponse);
  rpc CreateTrack(CreateTrackRequest) returns (CreateTrackResponse);
  rpc UpdateTrack(UpdateTrackRequest) returns (UpdateTrackResponse);
  rpc DeleteTrack(DeleteTrackRequest) returns (DeleteTrackResponse);
  rpc DeleteTracks(DeleteTracksRequest) returns (DeleteTracksResponse);
  
  rpc UploadFile(UploadFileRequest) returns (UploadFileResponse);
  rpc DeleteFile(DeleteFileRequest) returns (DeleteFileResponse);
} 